--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -75,9 +75,39 @@
   font-weight: 600;
   cursor: pointer;
   text-decoration: none;
-  text-align: right;
+  /* text-align: ; */
   margin-right: 1rem;
 }
+
+.update-button-list {
+  width: 100%;
+  height: 10vh;
+  padding: 0.6rem 0.4rem;
+  font-size: 1.3rem;
+  background-color: #c6d9f1;
+  color: #222;
+  border: 1px solid #222;
+  border-radius: 4px;
+  font-weight: 600;
+  cursor: pointer;
+  text-decoration: none;
+  /* text-align: ; */
+  margin-right: 1rem;
+}
+.update-button-list option{
+
+  font-size: 20px;
+  font-family:sans-serif;
+  font-weight: 500;
+}
+
+.update-button-list:hover {
+  /* background-color: #fffe01; */
+  border: 1px solid #222;
+  color: #222;
+  transition: 0.2s;
+}
+
 
 .update-button:hover {
   background-color: #fffe01;
@@ -105,4 +135,23 @@
     margin-top: 0.5rem;
     margin-right: 0;
   }
+}
+@media (max-width:768px){
+
+  .update-button-list {
+    width: 80%;
+    height: 10vh;
+    padding: 0.6rem 0.4rem;
+    font-size: 1rem;
+    background-color: #c6d9f1;
+    color: #222;
+    border: 1px solid #222;
+    border-radius: 4px;
+    font-weight: 600;
+    cursor: pointer;
+    text-decoration: none;
+    /* text-align: ; */
+    margin-right: 1rem;
+  }
+ 
 }
